# architect-job-agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
config/: app.yaml  countries.yaml  coverletter.yaml  profile.yaml  resume.yaml  roles.yaml  search.yaml
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/applications/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/jobs/[id]/: page.tsx
frontend/app/search/: page.tsx
frontend/lib/: api.ts
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: migrate.py  supabase_bootstrap.sql
src/architect_job_agent/: __init__.py  cli.py
src/architect_job_agent/application/: prompts.py  services.py
src/architect_job_agent/core/: config.py  exceptions.py  logging.py
src/architect_job_agent/domain/: entities.py  repositories.py
src/architect_job_agent/infrastructure/: jobspy_client.py  resume_parser.py
src/architect_job_agent/infrastructure/ai/: base.py  claude_provider.py  factory.py  gemini_provider.py  nvidia_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
src/architect_job_agent/infrastructure/db/: models.py  repositories.py  session.py
src/architect_job_agent/presentation/api/: app.py  dependencies.py  schemas.py
tests/: conftest.py
tests/integration/: test_api_smoke.py
tests/unit/: test_ai_json_extract.py  test_config.py  test_fingerprint.py  test_repositories.py  test_scoring_service.py
(+7 files in other folders)
